--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="#">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
