Made some cosmetic changes to generic and main page

--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,6 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
 					</header>
 
 				<!-- Nav -->
@@ -29,12 +28,14 @@
 							<li class="active"><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
+						<!-- I should add a LinkedIn Icon up here
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
+						-->
 					</nav>
 
 				<!-- Main -->
