Worked on tomb for two page and got logos on main page

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
 							Looking for meaningful work in the Game Development Industry that will allow me to apply years of experience.</p>
 					</div>
 
+				<!-- Header -->
+					<header id="header">
+					</header>
+
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<!--<li><a href="generic.html">Generic Page</a></li>-->
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
-							<li><a href="">Tomb For Two</a></li>
-							<li><a href="">Roblox Development</a></li>
-							<li><a href="">Sneakeasy</a></li>
+							<li><a href="tombfortwo.html">Tomb For Two</a></li>
+							<li><a href="generic.html">Roblox Development</a></li>
+							<li><a href="generic.html">Sneakeasy</a></li>
 						</ul>
 						<!-- I should add a LinkedIn Icon up here
 						<ul class="icons">
@@ -55,11 +59,15 @@
 										<span class="date">Fall 2022</span>
 										<h2><a href="#">Tomb for Two</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<!--<p>Primary Role: <span class="project-role">Programming Team Member</span></p>-->
-									<p>Tomb For Two was the Fall 2022 Spartasoft Studio project. 
+									<a href="#" class="image fit"><img class="project-logo tomb-for-two-logo" src="images/TombForTwoLogo.png" alt="" /></a>
+									<p class="project-role">Role: <span>Programming Team Member</span></p>
+									<p>
+										Tomb For Two is a 2 player couch co-op game, and was the Fall 2022 Spartasoft Studio project. 
 										It was my first experience working on a game development team, 
-										as well as my first experience in Unity.</p>
+										as well as my first experience in Unity. Despite my lack of experience,
+										my performance on this project would earn me a Team Director nomination,
+										a role which I would later fill in the Fall of 2023.
+									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
@@ -70,8 +78,15 @@
 										<span class="date">2015 - Present</span>
 										<h2><a href="#">Roblox Development</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img class="project-logo" src="images/pic03.jpg" alt="" /></a>
+									<p class="project-role">Role: <span>Hobbyist</span></p>
+									<p>
+										My first experiences in game development were on the popular gaming platform Roblox,
+										which taught me critical skills and concepts, such as the client-server model, 
+										event-based programming, and object-oriented design. My understanding of these
+										topics, as well as the practical, hands-on experiences I had on the platform,
+										have helped me flourish in my more recent team-and-Unity-based environments.
+									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
@@ -82,10 +97,13 @@
 										<span class="date">Spring 2023</span>
 										<h2><a href="#">Sneakeasy</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Sneakeasy was the Spring 2023 Spartasoft Studio project.
+									<a href="#" class="image fit"><img class="project-logo sneak-easy-logo" src="images/SneakEasyLogo.png" alt="" /></a>
+									<p class="project-role">Role: <span>Programming Team Member</span></p>
+									<p>
+										Sneakeasy is a single player 2D platformer, and was the Spring 2023 Spartasoft Studio project.
 										Having some experience under my belt from the semester before,
-										it was 
+										it was my first chance to really contribute to a group project
+										from start to finish.
 									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
