messed around with some flexbox stuff

--- a/tombfortwo.html
+++ b/tombfortwo.html
@@ -60,7 +60,7 @@
 									</p>
 								</header>
 								<div class="image main"><img src="images/original-portfolio-images/TFT_main.jpg" alt="" /></div>
-								<div class="box alt">
+								<div class="box">
 									<!--Change this to a flexbox-->
 									<div class="row gtr-50">
 										<div class="off-1 col-9">
