Main Body style draft #1

--- a/generic.html
+++ b/generic.html
@@ -66,7 +66,12 @@
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<div class="row-content">
 									<div class="column-content">
-										<p>This is some test text. I'm just gonna throw up on my keboard realy quickasdjfoijawopiejfpoawjepoijpoaiwjepofjwapoejfpoiwjapoiefoipjawoipeoiajpoifjwe</p>
+										<p>
+											This is some test text. I'm just gonna throw up on my keboard realy quick 
+											some words here and some more and some more here and some more there and 
+											a couple more until I think the line is long enough but we have spaces so 
+											it should wrap
+										</p>
 										<p>This is some more test text!</p>
 									</div>
 								</div>
