Moved the Sneakeasy content onto the actual page, added media

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 								<article>
 									<header>
 										<span class="date">Spring 2023</span>
-										<h2><a href="#">Sneakeasy</a></h2>
+										<h2><a href="sneakeasy.html">Sneakeasy</a></h2>
 									</header>
-									<a href="#" class="image fit"><img class="project-logo sneak-easy-logo" src="images/SneakEasyLogo.png" alt="" /></a>
+									<a href="sneakeasy.html" class="image fit"><img class="project-logo sneak-easy-logo" src="images/SneakEasyLogo.png" alt="" /></a>
 									<p class="project-role">Role: <span>Programming Team Member</span></p>
 									<p>
 										Sneakeasy is a single player 2D platformer, and was the Spring 2023 Spartasoft Studio project.
@@ -106,7 +106,7 @@
 										from start to finish.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="sneakeasy.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 
