Added clips to roblox dev page

--- a/robloxdev.html
+++ b/robloxdev.html
@@ -81,7 +81,7 @@
                                             This was particularly important when dealing with pushing and pulling other players, 
                                             as player characters are commonly multi-part assemblies.
 										</p>
-										<a class="button" href="images/original-portfolio-images/SWS_Landing.gif">Watch Clip</a>
+										<a class="button" href="images/ForcePushPull.gif">Watch Clip</a>
 										<br/>
 
                                         <!--Kamil's Surfing-->
@@ -100,8 +100,10 @@
                                             where the races actually took place, allowing the player to select a board in the main hub 
                                             and then see that selection reflected in the race itself.
                                         </p>
-                                        <a class="button" href="images/original-portfolio-images/TFTDash.gif">Watch Clip</a>
-										<br/>
+                                        <a class="button" href="images/BoardSelection.gif">Watch Clip</a>
+										<p>
+                                            You can ride the waves in <a href="https://www.roblox.com/games/8304692922/Kamils-Surfing">this</a> Roblox experience!
+                                        </p>
 
                                         <!--Blackjack-->
                                         <h2>Blackjack</h2>
@@ -112,8 +114,10 @@
                                             It also utilizes a proper deck with a limited amount of each card, 
                                             providing players with an experience that is true to the real game.
                                         </p>
-                                        <a class="button" href="images/original-portfolio-images/TFTDash.gif">Watch Clip</a>
-										<br/>
+                                        <a class="button" href="images/MultiplayerBlackjack.gif">Watch Clip</a>
+										<p>
+											You can try the game out <a href="https://www.roblox.com/games/11846007253/Multiplayer-Blackjack">here</a>!
+										</p>
 
                                         <!--Weapons-->
                                         <h2>Weapons System</h2>
@@ -142,9 +146,8 @@
                                             and idle animations for each of the guns I scripted.
                                         </p>
                                         <a class="button" href="images/original-portfolio-images/WeaponFactoryAnimations.gif">Watch Clip</a>
-										<br/>
                                         <p>
-                                            You can try the weapons out for yourself in <a>this</a> Roblox experience!
+                                            You can try the weapons out for yourself in <a href="https://www.roblox.com/games/5233731102/Weapon-Factory">this</a> Roblox experience!
                                         </p>
 
 									</div>
