Testing watch clip changes

--- a/tombfortwo.html
+++ b/tombfortwo.html
@@ -80,7 +80,11 @@
 											works by first stripping the player of regular movement controls. It then applies an impulse to the player model in the direction
 											that they were moving using Unity's Rigidbody.AddForce() function.
 										</p>
-										<a class="button" href="images/original-portfolio-images/TFTDash.gif">Watch Clip</a>
+										<div class="flex-column">
+											<a class="button" href="images/original-portfolio-images/TFTDash.gif">Watch Clip</a>
+											<input type="button" class="watch-clip button" value="Watch Clip">
+											<img src="images/original-portfolio-images/TFTDash.gif">
+										</div>
 										<br/>
 										<p>
 											Both player movement and dashing get overriden when a player steps onto an ice puzzle, which I coded completely on my own.
@@ -91,9 +95,9 @@
 											it lets the controller know that the player needs to be stopped, and can choose a new direction to move in.
 										</p>
 										<a class="button" href="images/original-portfolio-images/TFTIcePuzzle.gif">Watch Clip</a>
-
+										
 										<!--Enemies-->
-										<h2><b><u>Enemies</u></b></h2>
+										<h2>Enemies</h2>
 										<p>
 											The enemies in Tomb For Two are credited largely to my teammate Nick Fraus, who did the majority of the work on them.
 											I did, however, have my contributions.
