Added first video to site. More to come

--- a/tombfortwo.html
+++ b/tombfortwo.html
@@ -80,11 +80,9 @@
 											works by first stripping the player of regular movement controls. It then applies an impulse to the player model in the direction
 											that they were moving using Unity's Rigidbody.AddForce() function.
 										</p>
-										<div class="flex-column">
-											<a class="button" href="images/original-portfolio-images/TFTDash.gif">Watch Clip</a>
-											<input type="button" class="watch-clip button" value="Watch Clip">
-											<img src="images/original-portfolio-images/TFTDash.gif">
-										</div>
+										<video controls loop>
+											<source src="images/MP4s/TFTDash.mp4" type="video/mp4">
+										</video>
 										<br/>
 										<p>
 											Both player movement and dashing get overriden when a player steps onto an ice puzzle, which I coded completely on my own.
