Updated gifs to mp4s for better user experience

--- a/sneakeasy.html
+++ b/sneakeasy.html
@@ -80,7 +80,12 @@
 											The player was then able to vault, roll, wall kick, and ledge grab their way through the environment 
 											in a fluid manner, keeping their momentum where they would have otherwise lost it.
 										</p>
-										<a class="button" href="images/SneakeasyQTE1.gif">Watch Clip</a>
+
+										<video controls loop height="520" width="520">
+											<source src="images/MP4s/SneakeasyQTE1.mp4" type="video/mp4">
+										</video>
+										<br/>
+
 										<p>
 											As the player successfully performs consecutive QTEs, they build up a “momentum combo,” 
 											which stacks up to a max level of 3. The higher the momentum combo, the faster the player accelerates, 
