Updating text (grammar)

--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
 									<a href="tombfortwo.html" class="image fit"><img class="project-logo tomb-for-two-logo" src="images/TombForTwoLogo.png" alt="" /></a>
 									<p class="project-role">Role: <span>Programming Team Member</span></p>
 									<p>
-										Tomb For Two is a 2 player couch co-op game, and was the Fall 2022 Spartasoft Studio project. 
+										Tomb For Two is a 2-player couch co-op game and was the Fall 2022 Spartasoft Studio project. 
 										It was my first experience working on a game development team, 
-										as well as my first experience in Unity. Despite my lack of experience,
-										my performance on this project would earn me a Team Director nomination,
-										a role which I would later fill in the Fall of 2023.
+										as well as my first experience in Unity. My performance on this project would earn me a Team Director nomination,
+										a role which I hold now.
 									</p>
 									<ul class="actions special">
 										<li><a href="tombfortwo.html" class="button">Read More</a></li>
@@ -86,7 +85,7 @@
 										which taught me critical skills and concepts, such as the client-server model, 
 										event-based programming, and object-oriented design. My understanding of these
 										topics, as well as the practical, hands-on experiences I had on the platform,
-										have helped me flourish in my more recent team-and-Unity-based environments.
+										have helped me flourish in my more recent team- and Unity- based environments.
 									</p>
 									<ul class="actions special">
 										<li><a href="robloxdev.html" class="button">Read More</a></li>
@@ -102,9 +101,9 @@
 									<p class="project-role">Role: <span>Programming Team Member</span></p>
 									<p>
 										Sneakeasy is a single player 2D platformer, and was the Spring 2023 Spartasoft Studio project.
-										Having some experience under my belt from the semester before,
-										it was my first chance to really contribute to a group project
-										from start to finish.
+										Having gained relevant experience the semester prior,
+										it was my first chance to contribute my full skillset to
+										a group project in Unity.
 									</p>
 									<ul class="actions special">
 										<li><a href="sneakeasy.html" class="button">Read More</a></li>
