--- a/robloxdev.html
+++ b/robloxdev.html
@@ -63,11 +63,11 @@
 										<!--Star Wars Sim-->
 										<h2>Star Wars Simulator</h2>
 										<p>
-											Star Wars Simulator was a game my friends and I wanted to create over the Summer of 2022. 
+											Star Wars Simulator was a game my friends and I began creating over the Summer of 2022. 
                                             The end goal was to have a game where players could immerse themselves in the world of Star Wars, 
                                             playing as an anonymous citizen of the galaxy. 
-                                            The game never came to completion, but I do want to take a moment to highlight some of the gameplay 
-                                            abilities I developed for it. 
+                                            Although the game is still in development, I do want to take a moment to highlight some of the gameplay 
+                                            abilities I have developed for it. 
 										</p>
 										<p>
 											The force push and pull abilities both rely on spatial queries in front 
@@ -92,7 +92,7 @@
                                         <p>
                                             Kamil’s Surfing is a racing game in which players go head-to-head trying to outsurf each other. 
                                             Players can earn coins by placing highly in races, 
-                                            which they can then spend on upgraded boards.
+                                            and then spend those coins on upgraded boards.
                                         </p>
                                         <p>
                                             To accomplish this, I utilized Roblox’s DataStore service, 
@@ -146,7 +146,7 @@
                                         <p>
                                             To detect when a gun should fire, I utilized Roblox’s RemoteEvents, 
                                             which allow for communication between the client and the server. 
-                                            When a player clicks their mouse with a gun equipped, the client activates a RemoteEvent, 
+                                            When a player clicks with their mouse while they have a gun equipped, the client activates a RemoteEvent, 
                                             which then runs code on the server to handle the raycasting logic described above. 
                                             This was done to prevent hackers from being able to change important data about each fire, 
                                             such as the amount of damage to deal if an opposing player is hit.
