Started adding ttfx3d to portfolio

--- a/index.html
+++ b/index.html
@@ -110,7 +110,24 @@
 									</ul>
 								</article>
 
-								
+								<article>
+									<header>
+										<span class="date">Fall 2023</span>
+										<h2><a href="ttfighters.html">Trick or Treat Fighters</a></h2>
+									</header>
+									<a href="ttfighters.html" class="image fit"><img class="project-logo sneak-easy-logo" src="images/TTFightersLogo.png" alt="" /></a>
+									<p class="project-role">Role: <span>Programmer</span></p>
+									<p>
+										Trick or Treat Fighters is a 4-player fighting party game that pits players
+										against one another to collect the most candy before time expires. It was my team's submission
+										for our Game Development class in the Fall of 2023, and was crowned <b>"Most Fun,"
+										"Most Innovative,"</b> and runner-up for <b>"Best Aesthetic"</b> by a panel of alumni reviewers.
+									</p>
+									<ul class="actions special">
+										<li><a href="ttfighters.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+
 
 							</section>
 					</div>
