Made TTF "coming soon," started page and uploaded initial GIF recordings

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 								<article>
 									<header>
 										<span class="date">Fall 2023</span>
-										<h2><a href="ttfighters.html">Trick or Treat Fighters</a></h2>
+										<h2><a href="">Trick or Treat Fighters</a></h2>
 									</header>
-									<a href="ttfighters.html" class="image fit"><img class="project-logo sneak-easy-logo" src="images/TTFightersLogo.png" alt="" /></a>
+									<a href="" class="image fit"><img class="project-logo sneak-easy-logo" src="images/TTFightersLogo.png" alt="" /></a>
 									<p class="project-role">Role: <span>Programmer</span></p>
 									<p>
 										Trick or Treat Fighters is a 4-player fighting party game that pits players
@@ -124,7 +124,7 @@
 										"Most Innovative,"</b> and runner-up for <b>"Best Aesthetic"</b> by a panel of alumni reviewers.
 									</p>
 									<ul class="actions special">
-										<li><a href="ttfighters.html" class="button">Read More</a></li>
+										<li><a href="" class="button"><i>Coming Soon</i></a></li>
 									</ul>
 								</article>
 
