Updates to the square video styling, added Trick or Treat Fighters Trailer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>Kyle Nowak<br />
 						Game Programmer</h1>
-						<p>Junior majoring in Computer Science and minoring in Game Design and Development at MSU.<br/>
+						<p>Senior majoring in Computer Science and minoring in Game Design and Development at MSU.<br/>
 							Looking for meaningful work in the Game Development Industry that will allow me to apply years of experience.</p>
 					</div>
 
@@ -87,7 +87,7 @@
 										Tomb For Two is a 2-player couch co-op game and was the Fall 2022 Spartasoft Studio project. 
 										It was my first experience working on a game development team, 
 										as well as my first experience in Unity. My performance on this project would earn me a Team Director nomination,
-										a role which I hold now.
+										a role which I held in the Fall of 2023.
 									</p>
 									<ul class="actions special">
 										<li><a href="tombfortwo.html" class="button">Read More</a></li>
