Consistency update to ToTF

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 								<article>
 									<header>
-										<span class="date">Fall 2023</span>
+										<span class="date">Fall 2023 - Present</span>
 										<h2><a href="ttfighters.html">Trick or Treat Fighters</a></h2>
 									</header>
 									<a href="ttfighters.html" class="image fit"><img class="project-logo sneak-easy-logo" src="images/TTFightersLogo.png" alt="" /></a>
