Make wrapper smaller horizontally. Fixed nav bar font size

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	</head>
 	<body class="is-preload">
 
+			<!-- <div id="topper">
+
+			</div> -->
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -22,7 +25,7 @@
 					<div id="intro">
 						<h1>Kyle Nowak<br />
 						Game Programmer</h1>
-						<p>Senior majoring in Computer Science and minoring in Game Design and Development at MSU.<br/>
+						<p>Senior majoring in Computer Science and minoring in Game Design and Development at MSU.
 							Looking for meaningful work in the Game Development Industry that will allow me to apply years of experience.</p>
 					</div>
 
