expand content on phones

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<!--<li><a href="generic.html">Generic Page</a></li>-->
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
-							<li><a href="ttfighters.html">Trick Or Treat Fighters</a></li>
+							<li><a href="backyardbrawl.html">Backyard Brawl</a></li>
 							<li><a href="tombfortwo.html">Tomb For Two</a></li>
 							<li><a href="robloxdev.html">Roblox Development</a></li>
 							<li><a href="sneakeasy.html">Sneakeasy</a></li>
